--- a/ExcelReader/appsettings.json
+++ b/ExcelReader/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DbConnection": ""
+    "DbConnection": "Server=(localdb)||MSSQLLocalDB;Database=TestDb;Trusted_Connection=True;MultipleActiveResultSets=true"  
   }
 }
